--- a/style.css
+++ b/style.css
@@ -608,6 +608,10 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
+        
+        .button {
+            margin: 0rem;
+        }
     }
 
     .about-container {
