--- a/stylesheet/reset.css
+++ b/stylesheet/reset.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100..900&family=Lancelot&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+    /* Google Fonts */
+    --font-default: "Montserrat", sans-serif;
+    --font-logo: "Lancelot";
+    --font-nav: "Inter", sans-serif;
+    --font-title: "Fira Sans", sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
     font-size: 100%;
     font: inherit;
+    font-family: var(--font-default);
     color: inherit;
     vertical-align: baseline;
     box-sizing: border-box;
@@ -21,10 +30,6 @@ a {
     text-decoration: none;
 }
 
-:root {
-    /* Google Fonts */
-    --font-default: "Montserrat", sans-serif;
-    --font-logo: "Lancelot";
-    --font-nav: "Inter", sans-serif;
-    --font-title: "Fira Sans", sans-serif;
+.container {
+    height: 100vh;
 }
