--- a/stylesheet/light.css
+++ b/stylesheet/light.css
@@ -15,7 +15,7 @@
    --secondary-light: #D9D0C7; */
 }
 
-body {
+/* body {
     background-color: var(--primary-dark);
     color: var(--primary-light);
-}
+} */
