--- a/stylesheet/reset.css
+++ b/stylesheet/reset.css
@@ -14,6 +14,7 @@
     font-size: 100%;
     font: inherit;
     font-family: var(--font-default);
+    font-weight: 500;
     color: inherit;
     vertical-align: baseline;
     box-sizing: border-box;
