styling css: header and main

--- a/stylesheet/reset.css
+++ b/stylesheet/reset.css
@@ -4,8 +4,8 @@
     /* Google Fonts */
     --font-default: "Montserrat", sans-serif;
     --font-logo: "Lancelot";
-    --font-nav: "Inter", sans-serif;
-    --font-title: "Fira Sans", sans-serif;
+    --font-nav: "Fira Sans", sans-serif;
+    --font-title: "Inter", sans-serif;
 }
 
 * {
