--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,23 +1,28 @@
 @import url(reset.css);
 
+body {
+    background-color: var(--primary-dark);
+}
+
 .container-header {
     display: flex;
     flex-direction: row;
     justify-content: space-around; /* Cria uma espaço entre os itens */
     align-items: center; /* Alinha os itens na vertical */
-    position: fixed; /* Fixa o cabeçalho no topo da página */
+    position: absolute; /* Fixa o cabeçalho no topo da página */
     height: 2.5rem;
     width: 100%; /* Indica a largura do cabeçalho */
 
-    background-color: transparent;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: var(--primary-dark);
+    color: var(--secondary-light);
 
     /* Estilização do Logotipo */
     .logotype > a {
         font-family: var(--font-logo);
-        font-size: 1.5rem;
-        font-weight: 500;
+        font-size: 2rem;
+        font-weight: 600;
         text-transform: uppercase;
+        text-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
     }
 
     /* Menu de navegação */
@@ -30,6 +35,7 @@
         
         a {
             font-family: var(--font-nav);
+            font-size: 1.2rem;
             font-weight: 500;        
             text-transform: uppercase;
         }
@@ -49,7 +55,7 @@
         bottom: 0;
         width: 0;
         height: 0.12rem;
-        background-color: var(--secondary-dark);
+        background-color: var(--primary-light);
         transition: width 0.3s ease;
     }
 
@@ -59,10 +65,17 @@
 
     /* Estilização do interruptor do tema */
     .theme-switcher {
-        width: 3rem;
-        height: 2rem;
-        border: none;
+        width: 3.5rem;
+        height: 2.2rem;
+        background-color: transparent;
+        border: 0.1rem solid var(--primary-light);
         border-radius: 25rem;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+
+        &:hover {
+            cursor: pointer;
+            background-color: var(--primary-dark);
+        } 
     }
 
     .theme-switcher > img {
@@ -75,25 +88,35 @@
     flex-direction: column;
     height: 100vh;
     justify-content: center; /* Centraliza os itens no centro do viewport */
-    
+    color: var(--secondary-light);
     
     .cover-letter-summary {
         display: flex;
         flex-direction: row;
-        margin: 10%;
+        align-items: center;
+        text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        margin-top: 3rem;
+        padding: 3rem;
+    }
+
+    .summary {
+        margin-left: 10%;
+        margin-right: 5%;
+        background-color: transparent;
+        border: none;
     }
     
     .greet {
         font-family: var(--font-title);
-        font-weight: 400;
-        font-size: 2rem;
-        text-transform: uppercase;
+        font-weight: 200;
+        font-size: 2.5rem;
+        text-transform: capitalize;
     }
     
     .job-title {
         font-family: var(--font-title);
         font-weight: 500;
-        font-size: 2rem;
+        font-size: 3rem;
         text-transform: uppercase;
     }
     
@@ -101,7 +124,7 @@
         width: 10rem;
         height: 0.15rem;
         border: none;
-        background-color: var(--secondary-dark);
+        background-color: var(--secondary-light);
     }
     
     .job-summary {
@@ -109,7 +132,10 @@
     }
     
     .profile-picture {
-        width: 20rem;
+        width: 40rem;
+        align-content: center;
+        margin-right: 10%;
+        
         
         img {
             border-radius: 25rem;
@@ -122,5 +148,164 @@
         align-items: center;
         justify-items: space-around;
         gap: 10rem;
+        background-color: var(--primary-light);
+        padding: 2rem;
+    }
+    
+    .social-media-icons {
+        display: flex;
+        flex-direction: column;
+        margin: 1rem;
+        gap: 1rem;
+        color: var(--secondary-normal);
+        font-size: 1.5rem;
+        
+        a {
+            display: flex;
+            background-color: var(--primary-dark);
+            color: var(--secondary-light);
+            padding: 0.5rem;
+            border-radius: 25rem;
+            transition: transform 0.3s ease;
+        }
+    
+        li > a:hover {
+            transform: rotate(-10deg);
+        }
+
+        @keyframes shake {
+            10% {
+                transform: rotate(15deg);
+            }
+            20% {
+                transform: rotate(-15deg);
+            }
+            30% {
+                transform: rotate(15deg);
+            }
+            40% {
+                transform: rotate(-15deg);
+            }
+            50% {
+                transform: rotate(0deg);
+            }
+        }
+    }
+
+    .action-button {
+        color: var(--secondary-dark);
+        background-color: transparent;
+        border: 0.2rem solid var(--secondary-dark);
+        border-radius: 25rem;
+        padding: 0.8rem;
+        transition: background-color 0.3s ease;
+        box-shadow: 0rem 0.04rem 0.5rem rgba(0, 0, 0, 0.2);
+        text-transform: uppercase;
+        font-weight: bold;
+    
+        &:hover {
+            background-color: var(--primary-dark);
+            color: var(--secondary-light);
+            cursor: pointer;
+        }
+    }
+
+    .quote {
+        margin-left: 10rem;
+        color: var(--secondary-dark);
+        font-weight: 600;
+        font-size: 1rem;
+        font-family: var(--font-nav);
+    }
+}
+
+/* PORTFÓLIO */
+.portfolio-presentation {
+    display: flex;
+    flex-direction: column;
+    color: var(--secondary-dark);
+    background-color: var(--primary-light);
+    height: 100vh;
+    
+    .portfolio-presentation-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-shadow: 0rem 0.04rem 0.5rem rgba(0, 0, 0, 0.2);
+
+    }
+
+    .horizontal-row {
+        width: 50%;
+        align-self: center;
+        margin-bottom: 2rem;
+    }
+
+    .portfolio-presentation-title {
+        font-family: var(--font-title);
+        font-size: 1.5rem;
+        text-transform: uppercase;
+    }
+
+    .portfolio-presentation-subtitle {
+        font-family: var(--font-title);
+        font-size: 2rem;
+        text-transform: capitalize;
+    }
+
+    .projects-container {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        margin: 1rem;
+    }
+
+    .projects-container-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--primary-dark);
+        color: var(--secondary-light);
+        border-radius: 1rem;
+        overflow: hidden;
+        cursor: pointer;
+    }
+
+    .projects-container-card > img {
+        width: 100%;
+        max-width: 20rem;
+        transition: 0.25s;
+        box-shadow: 0rem 0.04rem 0.5rem rgba(0, 0, 0, 0.2);
+
+        &:hover {
+            transform: scale(1.2);
+            z-index: 1;
+        }
+    }
+
+    .project-highlight {
+        padding: 1rem;
+    }
+}
+
+.container-footer {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    color: var(--secondary-light);
+    gap: 1rem;
+    margin: 1rem;
+
+    .copyright {
+        align-self: center;
+        font-size: 1rem;
+    }
+
+    .social-media-icons {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        font-size: 1.2rem;
+        gap: 1rem;
     }
 }
